--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Odin Recipes|Recipe Book</title>
+  <title>Odin Recipe Book</title>
 </head>
 <body>
-  <h1>The Recipe Book</h1>
+  <h1>Odin Recipes</h1>
   <p>Hello and Welcome! We will be adding a few simple recipes today! <br> It should be fun!</p>
-  
+  <ul id="recipes">
+    <li id="tomato-juice" ><a href="recipes/tomato-juice.html">Tomato Juice</a></li>
+  </ul>
 </body>
 </html>
