feat: add poha recipe, cosmetic changes in tomato-juice

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <p>Hello and Welcome! We will be adding a few simple recipes today! <br> It should be fun!</p>
   <ul id="recipes">
     <li id="tomato-juice" ><a href="recipes/tomato-juice.html">Tomato Juice</a></li>
+    <li id="poha"><a href="recipes/poha.html">Poha</a></li>
   </ul>
 </body>
 </html>
