--- a/recipes/tomato-juice.html
+++ b/recipes/tomato-juice.html
@@ -7,11 +7,12 @@
 </head>
 <body>
   <h1>Tomato juice</h1>
+  <img id="tomato-juice-image" src="../images/tomato-juice.jpeg" height="600" alt="A glass of Tomato Juice">
   <p id="description">So, you are looking to make some delicious and healthy juice? You have very little time on your hands but crave for some thing filling? <br>
   I might have just the thing for you! Let's dive in and explore how to make a tomato juice.</p>
   <h2 id="ingredients">Ingredients</h2>
   <ul id="ingredients">
-    <li>Tomatoes - 3 or 4 Nos.</li>
+    <li>Tomatoes - 3 or 4 Nos</li>
     <li>Salt to taste</li>
   </ul>
   <p id="ingredients">And that's it. You don't need a whole lot to make this juice.</p>
@@ -29,7 +30,7 @@
     <li>Once the tomatoes are around room temperature, you need to peel the skin off of the tomatoes. The skin should peel off easily if you have boild and subsequently <br>
     coold them.</li>
     <li>This is an optional step. You can cut the tomatoes in half and scoop out the seeds. You can skip this step and use the tomatoes with the seeds as well. Do note that <br>
-    leaving the seeds in could attribute a slight bitter taste to your juice.</li>\
+    leaving the seeds in could attribute a slight bitter taste to your juice.</li>
     <li>Next, blend the tomatoes together with a pinch of salt. You can use a juice belender or  mixer grinder for this.</li>
     <li>Et voila! Your godawesome tomato juice is ready to pour and serve!</li>
   </ol>
