feat: add hostel-cheese-maggie recipe and link

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <ul id="recipes">
     <li id="tomato-juice" ><a href="recipes/tomato-juice.html">Tomato Juice</a></li>
     <li id="poha"><a href="recipes/poha.html">Poha</a></li>
+    <li id="maggie"><a href="recipes/hostel-cheese-maggie.html">Hostel Cheese Maggie</a></li>
   </ul>
 </body>
 </html>
