feat: add back button to all recipe pages

--- a/recipes/hostel-cheese-maggie.html
+++ b/recipes/hostel-cheese-maggie.html
@@ -35,5 +35,6 @@
     <li>Plate the cooked maggie. Add a slice of cheese on top and savour the sight of the cheese taking on the contour of the maggie.</li>
     <li>Grab a fork, dig in!</li>
   </ol>
+  <a href="../index.html">Back</a>
 </body>
 </html>
