--- a/recipes/poha.html
+++ b/recipes/poha.html
@@ -62,5 +62,6 @@
     <li>I like my poha to look colorful - the yellow dotted with green peas, brown goundnuts and toor dal, red tomatoes dotting, light brown potatoes and green coriander on top with <br>
     bright yello sev on top. However, the potatoes, peas, tomaotes can be left out as well. Be mindful that leaving out a lot of the ingredients will leave you with a very <em>basic</em> poha.</li>
   </ul>
+  <a href="../index.html">Back</a>
 </body>
 </html>
