--- a/recipes/tomato-juice.html
+++ b/recipes/tomato-juice.html
@@ -34,6 +34,6 @@
     <li>Next, blend the tomatoes together with a pinch of salt. You can use a juice belender or  mixer grinder for this.</li>
     <li>Et voila! Your godawesome tomato juice is ready to pour and serve!</li>
   </ol>
-  
+  <a href="../index.html">Back</a>
 </body>
 </html>
