add style.css to main page and all children
properties for h1 set
created new div containers for title and images
add border to images - responsivness to be added

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css"/>
   <title>Odin Recipe Book</title>
 </head>
 <body>
-  <h1>Odin Recipes</h1>
+  <div class="navbar">
+    <h1>Odin Recipes</h1>
+  </div>
   <p>Hello and Welcome! We will be adding a few simple recipes today! <br> It should be fun!</p>
   <ul id="recipes">
     <li id="tomato-juice" ><a href="recipes/tomato-juice.html">Tomato Juice</a></li>
