--- a/recipes/hostel-cheese-maggie.html
+++ b/recipes/hostel-cheese-maggie.html
@@ -3,11 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../style.css"/>
   <title>Recipe | Cheese Maggie</title>
 </head>
 <body>
-  <h1>Cheese Maggie</h1>
-  <img id="cheese-maggie" src="../images/maggie.jpeg" alt="Cheese Maggie">
+  <div class="navbar">
+    <h1>Cheese Maggie</h1>
+  </div>
+  <div class="img" id="maggi_img">
+    <img id="cheese-maggie" src="../images/maggie.jpeg" alt="Cheese Maggie">
+  </div>
   <p id="description">Who doesn't love Maggie? Especially with winters just round the corner, the "2-minute-noodles" are just the thing for the cold!<br>
   From school going kids to teenagers in colleges and working professionals, everyone loves maggie for its tase. And cheese maggie! That's something <br>
   sacrilegious and the most lustful maggie at the same time. In this article, let's explore some variants of this masterpiece.</p>
