--- a/recipes/poha.html
+++ b/recipes/poha.html
@@ -3,11 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../style.css"/>
   <title>Recipe | Poha</title>
 </head>
 <body>
-  <h1>Poha</h1>
-  <img id="poha" src="../images/kanda-batata-poha.jpg" alt="Kanda Batata Poha with Sev.">
+  <div class="navbar">
+    <h1>Poha</h1>
+  </div>
+  <div class="img" id="poha_img">
+    <img id="poha" src="../images/kanda-batata-poha.jpg" alt="Kanda Batata Poha with Sev.">
+  </div>
+  
   <p id="description">Poha or Pohe or Kanda Pohe as it may be called, is a simple to make and high in contentment food. Making Poha is simple and it takes harly 15 minutes to <br>
   prepare. There are many optional ingredients involved and I have listed <em>(optional)</em> beside them. You can skip a couple of these but I would recommened <br>
   try the recipe with and without the optional ingredients and settle into your own unique style! Let's begin!</p>
