--- a/recipes/tomato-juice.html
+++ b/recipes/tomato-juice.html
@@ -3,11 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../style.css"/>
   <title>Recipe | Tomato juice</title>
 </head>
 <body>
-  <h1>Tomato juice</h1>
-  <img id="tomato-juice-image" src="../images/tomato-juice.jpeg" height="600" alt="A glass of Tomato Juice">
+  <div class="navbar">
+    <h1>Tomato juice</h1>
+  </div>
+  <div class="img" id="tomato_juice_img">
+    <img id="tomato-juice-image" src="../images/tomato-juice.jpeg" height="600" alt="A glass of Tomato Juice">
+  </div>
   <p id="description">So, you are looking to make some delicious and healthy juice? You have very little time on your hands but crave for some thing filling? <br>
   I might have just the thing for you! Let's dive in and explore how to make a tomato juice.</p>
   <h2 id="ingredients">Ingredients</h2>
