--- a/recipes/hostel-cheese-maggie.html
+++ b/recipes/hostel-cheese-maggie.html
@@ -16,30 +16,35 @@
   <p id="description">Who doesn't love Maggie? Especially with winters just round the corner, the "2-minute-noodles" are just the thing for the cold!<br>
   From school going kids to teenagers in colleges and working professionals, everyone loves maggie for its tase. And cheese maggie! That's something <br>
   sacrilegious and the most lustful maggie at the same time. In this article, let's explore some variants of this masterpiece.</p>
-  <h2 id="ingredients">Ingredients</h2>
-  <ul id="ingredients">
-    <li>Maggie Noodles</li>
-    <li>Cheese</li>
-    <li>Onions</li>
-    <li>Green Peas</li>
-    <li>Carrots</li>
-    <li>Garam Masala</li>
-    <li>Salt</li>
-    <li>Oil</li>  
-  </ul>
-  <h2 id="steps">Steps</h2>
-  <ol id="steps">
-    <li>Take 2 table spoons of oil in an utensil.</li>
-    <li>Saute some onions. You are aiming for a golden brown color.</li>
-    <li>You can add the green peas and carrots at this stage.</li>
-    <li>Add some garam masala and a pinch of salt.</li>
-    <li>Once the vegetables are cooked, you can add the maggie noodles.</li>
-    <li>You will have to add a cup of water to cook the maggie noodles.</li>
-    <li>Add the Maggie Masala that comes with the noodels and let the mixures simmer.</li>
-    <li>Add another half cup of water to cook the noodles. Be mindful of the amount of water you add. You don't want the maggie to sit in a pool of masala water.</li>
-    <li>Plate the cooked maggie. Add a slice of cheese on top and savour the sight of the cheese taking on the contour of the maggie.</li>
-    <li>Grab a fork, dig in!</li>
-  </ol>
+  <div class="counters">
+    <h2 id="ingredients">Ingredients</h2>
+    <ul id="ingredients">
+      <li class="section">Maggie Noodles</li>
+      <li class="section">Cheese</li>
+      <li class="section">Onions</li>
+      <li class="section">Green Peas</li>
+      <li class="section">Carrots</li>
+      <li class="section">Garam Masala</li>
+      <li class="section">Salt</li>
+      <li class="section">Oil</li>  
+    </ul>
+  </div>
+  
+  <div class="counters">
+    <h2 id="steps">Steps</h2>
+    <ol id="steps">
+      <li class="section">Take 2 table spoons of oil in an utensil.</li>
+      <li class="section">Saute some onions. You are aiming for a golden brown color.</li>
+      <li class="section">You can add the green peas and carrots at this stage.</li>
+      <li class="section">Add some garam masala and a pinch of salt.</li>
+      <li class="section">Once the vegetables are cooked, you can add the maggie noodles.</li>
+      <li class="section">You will have to add a cup of water to cook the maggie noodles.</li>
+      <li class="section">Add the Maggie Masala that comes with the noodels and let the mixures simmer.</li>
+      <li class="section">Add another half cup of water to cook the noodles. Be mindful of the amount of water you add. You don't want the maggie to sit in a pool of masala water.</li>
+      <li class="section">Plate the cooked maggie. Add a slice of cheese on top and savour the sight of the cheese taking on the contour of the maggie.</li>
+      <li class="section">Grab a fork, dig in!</li>
+    </ol>
+  </div>
   <a href="../index.html">Back</a>
 </body>
 </html>
