add container div with styles, style h2 elements

--- a/recipes/poha.html
+++ b/recipes/poha.html
@@ -18,29 +18,32 @@
   prepare. There are many optional ingredients involved and I have listed <em>(optional)</em> beside them. You can skip a couple of these but I would recommened <br>
   try the recipe with and without the optional ingredients and settle into your own unique style! Let's begin!</p>
   <div class="counters">
-    <h2 id="ingredients">Ingredients</h2>
-    <ol>
-      <li class="section">Flattened rice or poha</li>
-      <li class="section">Mustard seeds</li>
-      <li class="section">Toor Dal or Split pigeon peas</li>
-      <li class="section">Onion 1-2 Nos</li>
-      <li class="section">Green chillies 1-2 Nos</li>
-      <li class="section">Turmeric powder</li>
-      <li class="section">Garam Masala</li>
-      <li class="section">Salt</li>
-      <li class="section">Oil 10-15ml</li>
-      <li class="section">Groundnuts - a handful</li>
-      <li class="section">Lemon</li>
-      <li class="section">Potato 1 No <em>(optional)</em></li>
-      <li class="section">Green peas <em>(optional)</em></li>
-      <li class="section">Sev <em>(optional)</em></li>
-      <li class="section">Corriander leaves <em>(optional)</em></li>
-      <li class="section">Tomatoes <em>(optional)</em></li>
-    </ol>
+    <div class="container">
+      <h2 id="ingredients">Ingredients</h2>
+      <ol>
+        <li class="section">Flattened rice or poha</li>
+        <li class="section">Mustard seeds</li>
+        <li class="section">Toor Dal or Split pigeon peas</li>
+        <li class="section">Onion 1-2 Nos</li>
+        <li class="section">Green chillies 1-2 Nos</li>
+        <li class="section">Turmeric powder</li>
+        <li class="section">Garam Masala</li>
+        <li class="section">Salt</li>
+        <li class="section">Oil 10-15ml</li>
+        <li class="section">Groundnuts - a handful</li>
+        <li class="section">Lemon</li>
+        <li class="section">Potato 1 No <em>(optional)</em></li>
+        <li class="section">Green peas <em>(optional)</em></li>
+        <li class="section">Sev <em>(optional)</em></li>
+        <li class="section">Corriander leaves <em>(optional)</em></li>
+        <li class="section">Tomatoes <em>(optional)</em></li>
+      </ol>
+    </div>
   </div>
   
   <div class="counters">
-    <h2 id="steps"></h2>
+    <div class="container">
+      <h2 id="steps">Steps</h2>
     <ol id="steps">
       <li class="section">Take the flattened rice in a collander and rinse it under tap water. Clean the flattened rice well and set it aside for a while. This lets the rice soak in some<br>
       water and become a little soft.</li>
@@ -72,6 +75,7 @@
       <li>I like my poha to look colorful - the yellow dotted with green peas, brown goundnuts and toor dal, red tomatoes dotting, light brown potatoes and green coriander on top with <br>
       bright yello sev on top. However, the potatoes, peas, tomaotes can be left out as well. Be mindful that leaving out a lot of the ingredients will leave you with a very <em>basic</em> poha.</li>
     </ul>
+    </div>
   </div>
   
   <a href="../index.html">Back</a>
