--- a/recipes/tomato-juice.html
+++ b/recipes/tomato-juice.html
@@ -16,32 +16,36 @@
   <p id="description">So, you are looking to make some delicious and healthy juice? You have very little time on your hands but crave for some thing filling? <br>
   I might have just the thing for you! Let's dive in and explore how to make a tomato juice.</p>
   <div class="counters">
-    <h2 id="ingredients">Ingredients</h2>
-    <ul id="ingredients">
-      <li class="section">Tomatoes - 3 or 4 Nos</li>
-      <li class="section">Salt to taste</li>
-    </ul>
-    <p id="ingredients">And that's it. You don't need a whole lot to make this juice.</p>
+    <div class="container">
+      <h2 id="ingredients">Ingredients</h2>
+      <ul id="ingredients">
+        <li class="section">Tomatoes - 3 or 4 Nos</li>
+        <li class="section">Salt to taste</li>
+      </ul>
+      <p id="ingredients">And that's it. You don't need a whole lot to make this juice.</p>
+    </div>
   </div>
   <div class="counters">
-    <h2 id="steps">Steps</h2>
-    <ol id="steps">
-      <li class="section">Take your tomatoes and add them to a utensil.</li>
-      <li class="section">Fill the utensil with water to completely submerge the tomatoes.</li>
-      <li class="section">Boil the water with the tomatoes for 10-15 minutes.</li>
-      <li class="section">After boiling the tomatoes, drain the hot water out and cool the tomatoes. You can do this by:</li>
-      <ul class="section">
-        <li>Adding cold water to the tomatoes in the utensil and let them cool down for about 10 minutes.</li>
-        <p>OR</p>
-        <li>Place the tomatoes on an empty plate and let them cool</li>
-      </ul>
-      <li class="section">Once the tomatoes are around room temperature, you need to peel the skin off of the tomatoes. The skin should peel off easily if you have boild and subsequently <br>
-      coold them.</li>
-      <li class="section">This is an optional step. You can cut the tomatoes in half and scoop out the seeds. You can skip this step and use the tomatoes with the seeds as well. Do note that <br>
-      leaving the seeds in could attribute a slight bitter taste to your juice.</li>
-      <li class="section">Next, blend the tomatoes together with a pinch of salt. You can use a juice belender or  mixer grinder for this.</li>
-      <li class="section">Et voila! Your godawesome tomato juice is ready to pour and serve!</li>
-    </ol>
+    <div class="container">
+      <h2 id="steps">Steps</h2>
+      <ol id="steps">
+        <li class="section">Take your tomatoes and add them to a utensil.</li>
+        <li class="section">Fill the utensil with water to completely submerge the tomatoes.</li>
+        <li class="section">Boil the water with the tomatoes for 10-15 minutes.</li>
+        <li class="section">After boiling the tomatoes, drain the hot water out and cool the tomatoes. You can do this by:</li>
+        <ul class="section">
+          <li>Adding cold water to the tomatoes in the utensil and let them cool down for about 10 minutes.</li>
+          <p>OR</p>
+          <li>Place the tomatoes on an empty plate and let them cool</li>
+        </ul>
+        <li class="section">Once the tomatoes are around room temperature, you need to peel the skin off of the tomatoes. The skin should peel off easily if you have boild and subsequently <br>
+        coold them.</li>
+        <li class="section">This is an optional step. You can cut the tomatoes in half and scoop out the seeds. You can skip this step and use the tomatoes with the seeds as well. Do note that <br>
+        leaving the seeds in could attribute a slight bitter taste to your juice.</li>
+        <li class="section">Next, blend the tomatoes together with a pinch of salt. You can use a juice belender or  mixer grinder for this.</li>
+        <li class="section">Et voila! Your godawesome tomato juice is ready to pour and serve!</li>
+      </ol>
+    </div>
   </div>
   
   <a href="../index.html">Back</a>
