--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
   <div class="navbar">
     <h1>Odin Recipes</h1>
   </div>
-  <p>Hello and Welcome! We will be adding a few simple recipes today! <br> It should be fun!</p>
+  <p>Hello and Welcome! We will be adding a few simple recipes today!
+    It should be fun!</p>
   <div class="counters">
     <ul id="recipes">
-      <li class="section" id="tomato-juice" ><a href="recipes/tomato-juice.html">Tomato Juice</a></li>
-      <li class="section" id="poha"><a href="recipes/poha.html">Poha</a></li>
-      <li class="section" id="maggie"><a href="recipes/hostel-cheese-maggie.html">Hostel Cheese Maggie</a></li>
+      <li class="section" id="tomato-juice" >
+        <a href="recipes/tomato-juice.html">Tomato Juice</a></li>
+      <li class="section" id="poha">
+        <a href="recipes/poha.html">Poha</a></li>
+      <li class="section" id="maggie">
+        <a href="recipes/cheese-maggie.html">Hostel Cheese Maggie</a></li>
     </ul>
   </div>
 </body>
