add counters div to description, indentation correction in poha, structural change in tomato-juice

--- a/recipes/cheese-maggie.html
+++ b/recipes/cheese-maggie.html
@@ -10,17 +10,22 @@
   <div class="navbar">
     <h1>Cheese Maggie</h1>
   </div>
+
   <div class="img" id="maggi_img">
     <img id="cheese-maggie" src="../images/maggie.jpeg" 
     alt="Cheese Maggie">
   </div>
-  <p id="description">Who doesn't love Maggie? Especially with winters
-    just round the corner, the "2-minute-noodles" are just the thing 
-    for the cold! From school going kids to teenagers in colleges and
-    working professionals, everyone loves maggie for its tase. 
-    And cheese maggie! That's something sacrilegious and the most 
-    lustful maggie at the same time. In this article, let's explore 
-    some variants of this masterpiece.</p>
+
+  <div class="counters">
+    <p id="description">Who doesn't love Maggie? Especially with winters
+      just round the corner, the "2-minute-noodles" are just the thing 
+      for the cold! From school going kids to teenagers in colleges and
+      working professionals, everyone loves maggie for its tase. 
+      And cheese maggie! That's something sacrilegious and the most 
+      lustful maggie at the same time. In this article, let's explore 
+      some variants of this masterpiece.</p>
+  </div>
+
   <div class="counters">
     <div class="container">
       <h2 id="ingredients">Ingredients</h2>
@@ -63,6 +68,7 @@
       </ol>
     </div>
   </div>
+  
   <a href="../index.html">Back</a>
 </body>
 </html>
