--- a/recipes/poha.html
+++ b/recipes/poha.html
@@ -14,18 +14,21 @@
     <img id="poha" src="../images/kanda-batata-poha.jpg" 
     alt="Poha with Sev.">
   </div>
+
+  <div class="counters">
+    <p id="description">Poha or Pohe or Kanda Pohe as it may be called,
+      is a simple to make and high in contentment food. Making Poha is
+      simple and it takes harly 15 minutes to prepare. There are 
+      many optional ingredients involved and I have listed <em>(optional)</em>
+      beside them. You can skip a couple of these but I would recommened
+      try the recipe with and without the optional ingredients and settle 
+      into your own unique style! Let's begin!</p>
+  </div>
   
-  <p id="description">Poha or Pohe or Kanda Pohe as it may be called,
-    is a simple to make and high in contentment food. Making Poha is
-    simple and it takes harly 15 minutes to prepare. There are 
-    many optional ingredients involved and I have listed <em>(optional)</em>
-    beside them. You can skip a couple of these but I would recommened
-    try the recipe with and without the optional ingredients and settle 
-    into your own unique style! Let's begin!</p>
   <div class="counters">
     <div class="container">
       <h2 id="ingredients">Ingredients</h2>
-      <ol>
+      <ol id="ingredients">
         <li class="section">Flattened rice or poha</li>
         <li class="section">Mustard seeds</li>
         <li class="section">Toor Dal or Split pigeon peas</li>
@@ -49,74 +52,75 @@
   <div class="counters">
     <div class="container">
       <h2 id="steps">Steps</h2>
-    <ol id="steps">
-      <li class="section">Take the flattened rice in a collander and
-        rinse it under tap water. Clean the flattened rice well and
-        set it aside for a while. This lets the rice soak in some
-        water and become a little soft.</li>
-      <li class="section">You need to slice an onion. You can dice it
-        into small pieces or leave them as thin and long stips.</li>
-      <li class="section">Cut the chillies into smaller pieces.</li>
-      <li class="section">Dice the potatoes. You need to keep them 
-        big enough for you to enjoy them in the Poha but small enough
-        for the potatoes to cook completely without buring the oil.</li>
-      <li class="section">With the veggies chopped and ready, the 
-        next step is to take a utensil which is preferrabley curved 
-        as shown in the image.</li>
-      <li class="section">Place your utensil on the stove  and heat 
-        some oil in it. We dont need a lot of oil to make Poha. 
-        Just about 10-15ml should be sufficient.</li>
-      <li class="section">You need to check how hot the oil is 
-        before adding the mustard seeds. You do this by adding 
-        a few seeds to the oil. If they pop as soon as they are 
-        in the oil,<br>
-      you can add the rest of the mustard seeds.</li>
-      <li class="section">Once the mustard seeds have stopped 
-        popping, you can add the toor dal. You can fry them till 
-        they acquire a light brown color.</li>
-      <li class="section">At this stage I go ahead and add the 
-        green chillies. Some people prefer to do it after the onions.</li>
-      <li class="section">Next into the utensil would be the onions.
-        You saute them till you get a light golden color.</li>
-      <li class="section">Then you can add the turmeric powder and
-        the garam masala. The salt goes in at this stage as well.
-        You can add a little extra salt at this stage if you plan on 
-        adding potatoes to the mix.</li>
-      <li class="section">Now you add the groundnuts. If you want to
-        add potatoes, you should add the groundnuts after the potatoes
-        are cooked or when they are nearly cooked. The two things that
-        can absolutely ruin a good poha are <em>undercooked potatoes</em>
-        and <em>burnt groundnuts</em>. You can also add the green 
-        peas at this stage.</li>
-      <li class="section">And now its time for the main ingredient -
-        the poha itself. Add the flattened rice to the mix. Make sure
-        you mix the contents well. You will most definitely need to 
-        hold the utensil while you carefully mix the contents. 
-        Keeping the stove on low flame or simmer is recommened. 
-        As you mix, you will see the white rice take on the yellow 
-        color from your preparation. You can swith off the stove as
-        the cooking is almost done.</li>
-      <li class="section">The Poha is almost ready. You can add some
-        cut corianeder leaves, tomatoes to the poha. This is the stage
-        where you squeeze the lemon over the poha and mix it all once
-        again to get a uniform taste.</li>
-      <li class="section">Your poha is ready to plate! You may sprinkle
-        some sev or bhujia over the poha and relish your delicious poha!</li>
-    </ol>
-    <h2>Notes</h2>
-    <ul>
-      <li>Ensure that the potatoes get cooked thoroughly. You don't 
-        want crispy-on-the-outside-raw-on-the-inside-potatoes in you poha.</li>
-      <li>Don't leave the oil on high flame for too long. You don't
-        want to burn your oil and have charred onions and chillies. 
-        Well, charred chilleies are fine, depends on your preference.</li>
-      <li>I like my poha to look colorful - the yellow dotted with
-        green peas, brown goundnuts and toor dal, red tomatoes dotting,
-        light brown potatoes and green coriander on top with bright 
-        yellow sev on top. However, the potatoes, peas, tomaotes can be
-        left out as well. Be mindful that leaving out a lot of the 
-        ingredients will leave you with a very <em>basic</em> poha.</li>
-    </ul>
+      <ol id="steps">
+        <li class="section">Take the flattened rice in a collander and
+          rinse it under tap water. Clean the flattened rice well and
+          set it aside for a while. This lets the rice soak in some
+          water and become a little soft.</li>
+        <li class="section">You need to slice an onion. You can dice it
+          into small pieces or leave them as thin and long stips.</li>
+        <li class="section">Cut the chillies into smaller pieces.</li>
+        <li class="section">Dice the potatoes. You need to keep them 
+          big enough for you to enjoy them in the Poha but small enough
+          for the potatoes to cook completely without buring the oil.</li>
+        <li class="section">With the veggies chopped and ready, the 
+          next step is to take a utensil which is preferrabley curved 
+          as shown in the image.</li>
+        <li class="section">Place your utensil on the stove  and heat 
+          some oil in it. We dont need a lot of oil to make Poha. 
+          Just about 10-15ml should be sufficient.</li>
+        <li class="section">You need to check how hot the oil is 
+          before adding the mustard seeds. You do this by adding 
+          a few seeds to the oil. If they pop as soon as they are 
+          in the oil,<br>
+        you can add the rest of the mustard seeds.</li>
+        <li class="section">Once the mustard seeds have stopped 
+          popping, you can add the toor dal. You can fry them till 
+          they acquire a light brown color.</li>
+        <li class="section">At this stage I go ahead and add the 
+          green chillies. Some people prefer to do it after the onions.</li>
+        <li class="section">Next into the utensil would be the onions.
+          You saute them till you get a light golden color.</li>
+        <li class="section">Then you can add the turmeric powder and
+          the garam masala. The salt goes in at this stage as well.
+          You can add a little extra salt at this stage if you plan on 
+          adding potatoes to the mix.</li>
+        <li class="section">Now you add the groundnuts. If you want to
+          add potatoes, you should add the groundnuts after the potatoes
+          are cooked or when they are nearly cooked. The two things that
+          can absolutely ruin a good poha are <em>undercooked potatoes</em>
+          and <em>burnt groundnuts</em>. You can also add the green 
+          peas at this stage.</li>
+        <li class="section">And now its time for the main ingredient -
+          the poha itself. Add the flattened rice to the mix. Make sure
+          you mix the contents well. You will most definitely need to 
+          hold the utensil while you carefully mix the contents. 
+          Keeping the stove on low flame or simmer is recommened. 
+          As you mix, you will see the white rice take on the yellow 
+          color from your preparation. You can swith off the stove as
+          the cooking is almost done.</li>
+        <li class="section">The Poha is almost ready. You can add some
+          cut corianeder leaves, tomatoes to the poha. This is the stage
+          where you squeeze the lemon over the poha and mix it all once
+          again to get a uniform taste.</li>
+        <li class="section">Your poha is ready to plate! You may sprinkle
+          some sev or bhujia over the poha and relish your delicious poha!</li>
+      </ol>
+      <h2 id="steps">Notes</h2>
+      <ul id="steps">
+        <li>Ensure that the potatoes get cooked thoroughly. You don't 
+          want crispy-on-the-outside-raw-on-the-inside-potatoes in your
+          poha.</li>
+        <li>Don't leave the oil on high flame for too long. You don't
+          want to burn your oil and have charred onions and chillies. 
+          Well, charred chilleies are fine, depends on your preference.</li>
+        <li>I like my poha to look colorful - the yellow dotted with
+          green peas, brown goundnuts and toor dal, red tomatoes dotting,
+          light brown potatoes and green coriander on top with bright 
+          yellow sev on top. However, the potatoes, peas, tomaotes can be
+          left out as well. Be mindful that leaving out a lot of the 
+          ingredients will leave you with a very <em>basic</em> poha.</li>
+      </ul>
     </div>
   </div>
   
