--- a/recipes/tomato-juice.html
+++ b/recipes/tomato-juice.html
@@ -14,10 +14,14 @@
     <img id="tomato-juice-image" src="../images/tomato-juice.jpeg" 
      alt="A glass of Tomato Juice">
   </div>
-  <p id="description">So, you are looking to make some delicious and
-    healthy juice? You have very little time on your hands but crave 
-    for some thing filling? I might have just the thing for you! 
-    Let's dive in and explore how to make a tomato juice.</p>
+
+  <div class="counters">
+    <p id="description">So, you are looking to make some delicious and
+      healthy juice? You have very little time on your hands but crave 
+      for some thing filling? I might have just the thing for you! 
+      Let's dive in and explore how to make a tomato juice.</p>
+  </div>
+
   <div class="counters">
     <div class="container">
       <h2 id="ingredients">Ingredients</h2>
@@ -29,6 +33,7 @@
         to make this juice.</p>
     </div>
   </div>
+  
   <div class="counters">
     <div class="container">
       <h2 id="steps">Steps</h2>
@@ -41,11 +46,10 @@
           10-15 minutes.</li>
         <li class="section">After boiling the tomatoes, drain the hot
           water out and cool the tomatoes. You can do this by:</li>
-        <ul class="section">
-          <li>Adding cold water to the tomatoes in the utensil and let
-            them cool down for about 10 minutes.</li>
-          <p>OR</p>
-          <li>Place the tomatoes on an empty plate and let them cool</li>
+        <li class="section">
+          Add cold water to the tomatoes in the utensil and let
+            them cool down for about 10 minutes. You could also place 
+            the tomatoes on an empty plate instead, and let them cool.</li>
         </ul>
         <li class="section">Once the tomatoes are around room temperature,
           you need to peel the skin off of the tomatoes. The skin should 
