--- a/recipes/cheese-maggie.html
+++ b/recipes/cheese-maggie.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+   rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="../style.css"/>
   <title>Recipe | Cheese Maggie</title>
 </head>
@@ -29,7 +32,7 @@
   <div class="counters">
     <div class="container">
       <h2 id="ingredients">Ingredients</h2>
-      <ul id="ingredients" >
+      <ul id="ingredients">
         <li class="section">Maggie Noodles</li>
         <li class="section">Cheese</li>
         <li class="section">Onions</li>
@@ -69,6 +72,7 @@
     </div>
   </div>
   
-  <a href="../index.html">Back</a>
+  <button type="button" class="btn btn-outline-warning" 
+  onclick="document.location='../index.html'">Back</button>
 </body>
 </html>
