--- a/recipes/tomato-juice.html
+++ b/recipes/tomato-juice.html
@@ -6,6 +6,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
    rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
     crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="../style.css"/>
   <title>Recipe | Tomato juice</title>
 </head>
@@ -72,6 +73,7 @@
   </div>
   
   <button type="button" class="btn btn-outline-warning" 
-  onclick="document.location='../index.html'">Back</button>
+  onclick="document.location='../index.html'">
+  <i class="bi bi-arrow-left-square"></i> Back</button>
 </body>
 </html>
