style card contents

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="card" style="width: 18rem;">
       <img class="card-img-top" src="images/tomato-juice.jpeg" alt="Tomato Juice">
       <div class="card-body">
-        <h5 class="card-title">Tomato Juice</h5>
+        <h3 class="card-title">Tomato Juice</h3>
         <p class="card-text">Healthy and easy to make</p>
       </div>
       <ul class="list-group list-group-flush">
@@ -36,7 +36,7 @@
     <div class="card" style="width: 18rem;">
       <img class="card-img-top" src="images/kanda-batata-poha.jpg" alt="Tomato Juice">
       <div class="card-body">
-        <h5 class="card-title">Poha</h5>
+        <h3 class="card-title">Poha</h3>
         <p class="card-text">Healthy and easy to make</p>
       </div>
       <ul class="list-group list-group-flush">
@@ -52,7 +52,7 @@
     <div class="card" style="width: 18rem;">
       <img class="card-img-top" src="images/maggie.jpeg" alt="Tomato Juice">
       <div class="card-body">
-        <h5 class="card-title">Cheese Maggi</h5>
+        <h3 class="card-title">Cheese Maggi</h3>
         <p class="card-text">Healthy and easy to make</p>
       </div>
       <ul class="list-group list-group-flush">
@@ -60,7 +60,7 @@
         <li class="list-group-item">Prep time less than 10 min</li>
       </ul>
       <div class="card-body">
-        <a href="recipes/cheese-maggie.html" class="card-link">Card link</a>
+        <a  class="card-link">Card link</a>
         <i class="bi bi-arrow-right-square"></i>
       </div>
     </div>
