add footer to main page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Odin Recipe Book</title>
 </head>
 <body>
-  <div class="navbar">
+  <div class="header">
     <h1>Odin Recipes</h1>
   </div>
   <p>Hello and Welcome! We will be adding a few simple recipes today!
@@ -65,5 +65,6 @@
       </div>
     </div>
   </div>
+  <nav>&copy; Adamnson</nav>
 </body>
 </html>
