--- a/recipes/cheese-maggie.html
+++ b/recipes/cheese-maggie.html
@@ -11,7 +11,7 @@
   <title>Recipe | Cheese Maggie</title>
 </head>
 <body>
-  <div class="navbar">
+  <div class="header">
     <h1>Cheese Maggie</h1>
   </div>
 
