--- a/recipes/poha.html
+++ b/recipes/poha.html
@@ -11,7 +11,7 @@
   <title>Recipe | Poha</title>
 </head>
 <body>
-  <div class="navbar">
+  <div class="header">
     <h1>Poha</h1>
   </div>
   <div class="img" id="poha_img">
