--- a/recipes/tomato-juice.html
+++ b/recipes/tomato-juice.html
@@ -11,7 +11,7 @@
   <title>Recipe | Tomato juice</title>
 </head>
 <body>
-  <div class="navbar">
+  <div class="header">
     <h1>Tomato juice</h1>
   </div>
   <div class="img" id="tomato_juice_img">
