make main page responsive

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="header">
     <h1>Odin Recipes</h1>
   </div>
-  <div class="counters">
+  <div class="content">
     <div class="card" style="width: 18rem;">
       <img class="card-img-top" src="images/tomato-juice.jpeg" alt="Tomato Juice">
       <div class="card-body">
